@@ -63,4 +63,6 @@ TODO: fdopendir/utimensat
         - remove useless use of volatile variables.
         - fix memory leak when reaping threads.
         - use utime now uses nanosecond resolution on posix 2008 systems.
+        - allow taking advantage of posix 2008 xxxat functions and fdopendir
+          by implementing a working directory abstraction.
 
